<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课程管理系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">学生课程管理系统</string>
    <string name="tips">提示信息:</string>
    <string name="tittle">苏州服务外包学院课程管理系统</string>
    <string name="login">登 录</string>
    <string name="login_name">用户名:</string>
    <string name="et_login_hint">请输入用户名</string>
    <string name="login_password">密      码:</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="register">注  册</string>
    <string name="cancel">取  消</string>
    <string name="register_name">用户名:</string>
    <string name="register_password">密  码:</string>
    <string name="register_repassword">确认密码:</string>
    <string name="et_register_name_hint">请输入用户名</string>
    <string name="et_register_password_hint">请输入密码</string>
    <string name="et_register_repassword_hint">请再输入一次密码</string>
    <string name="title_activity_add">AddActivity</string>

</resources>